# helper_for_maxi

./: .gitignore  CHANGELOG.md  LICENSE  README.md
0.0.3/package/: README.md  setup.cfg
0.0.3/package/helper/: better_print.py  terminal.py
0.0.4/: CHANGELOG.md
0.0.4/package/: README.md  setup.cfg
0.0.5/: CHANGELOG.md
0.0.5/package/: LICENSE  README.md  setup.cfg
0.0.6/: CHANGELOG.md
0.0.6/package/: README.md  setup.cfg
0.0.7/: CHANGELOG.md
0.0.7/package/: setup.cfg
0.0.8/: CHANGELOG.md
0.0.8/package/: README.md  setup.cfg
0.0.9/: CHANGELOG.md
0.0.9/package/: README.md  setup.cfg
0.1.0/: CHANGELOG.md
0.1.0/package/: setup.cfg
0.1.1/: CHANGELOG.md
0.1.1/package/: README.md  setup.cfg
0.1.2/: CHANGELOG.md
0.1.2/package/: setup.cfg
0.1.3/: CHANGELOG.md
0.1.3/package/: README.md  setup.cfg
0.1.4/: CHANGELOG.md
0.1.4/package/: README.md  setup.cfg
0.1.5/: CHANGELOG.md
0.1.5/package/: README.md  setup.cfg
1.0.0/: CHANGELOG.md
1.0.0/package/: setup.cfg
1.0.1/: CHANGELOG.md
1.0.1/package/: README.md  setup.cfg
1.0.2/: CHANGELOG.md
1.0.2/package/: setup.cfg
1.0.3/: CHANGELOG.md
1.0.3/package/: LICENSE  setup.cfg
1.0.4/: CHANGELOG.md
1.0.5/: CHANGELOG.md
1.0.6/: CHANGELOG.md
1.0.7/: CHANGELOG.md
1.0.8/: CHANGELOG.md
1.0.9/: CHANGELOG.md
1.1.0/: CHANGELOG.md
1.1.1/: CHANGELOG.md
1.1.2/: CHANGELOG.md
1.1.3/: CHANGELOG.md
1.1.4/: CHANGELOG.md
1.1.5/: CHANGELOG.md
1.1.6/: CHANGELOG.md
1.1.7/: CHANGELOG.md
1.1.8/: CHANGELOG.md
1.2.0/: CHANGELOG.md
package/: LICENSE
(+100 files in other folders)
