[metadata]
name = helper_for_maxi
version = 0.0.3
author = Maxi Myoga
description = Contains all Functions
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Github = https://github.com/CatMaxiMyoga/helper_for_maxi/tree/0.0.3/package
    Changelog = https://github.com/CatMaxiMyoga/helper_for_maxi/blob/0.0.3/Changelogs/Update%200.0.3.md
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True